tests/ui/hygiene/fields-definition.stderr
error[E0124]: field `a` is already declared
  --> $DIR/fields-definition.rs:14:13
   |
LL | / macro_rules! legacy {
LL | |     ($a: ident) => {
LL | |         struct Legacy {
LL | |             a: u8,
   | |             ----- `a` first declared here
LL | |             $a: u8,
   | |             ^^^^^^ field already declared
LL | |         }
LL | |     }
LL | | }
   | |_- in this expansion of `legacy!`
...
LL |   legacy!(a);
   |   ---------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0124`.
